# mass-adk-signal-studio

./: .env.example  .gitignore  ADK_WEB_DEMO.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVPOST_SUBMISSION_DRAFT.md  Dockerfile  IMPLEMENTATION_PLAN.md  MASS_ENGINE_INTEGRATION_PLAN.md  PRESENTATION_STRATEGY.md  README.md  REVIEWER_INSTRUCTIONS.md  SUBMISSION.md  environment.yml  pyproject.toml
assets/: architecture.mmd  mcp_flow.mmd  native_adk_flow.mmd
eval/: artifact_eval_config.json  eval_config.json  research_eval_config.json  safety_eval_config.json
eval/data/: mass_adk.test.json  mass_adk_artifacts.test.json  mass_adk_research.test.json  mass_adk_safety.test.json
mass_adk/: __init__.py  agent.py  config.py  mcp_server.py  prompt.py
mass_adk/data/: experiment_manifest.json
mass_adk/sub_agents/: __init__.py
mass_adk/tools/: __init__.py  artifact_tools.py  dataset_tools.py  engine_artifact_tools.py  evaluation_tools.py  experiment_tools.py  manifest.py  report_tools.py
mass_adk_mcp/: __init__.py  agent.py
mass_engine/: __init__.py  runner.py
mass_engine/cloud/: __init__.py  artifact_store.py  gcs_store.py  local_store.py
mass_engine/stock_disagreement/: __init__.py  main.py
mass_engine_adk/: __init__.py  agent.py  prompts.py  tools.py
sample_data/: README.md
sample_data/ih_smoke/: all_ashare_label.parq  base_data.parq  (+3 more)
scripts/: create_smoke_sample_data.py  launch_adk_web_demo.sh
tests/: test_artifact_tools.py  test_config.py  test_mass_engine.py  test_mass_engine_adk.py  test_mcp_server.py  test_sample_data.py  test_tools.py
(+32 files in other folders)
