[project]
name = "mass-adk"
version = "0.1.0"
description = "ADK-powered MASS signal research assistant for multi-agent financial signal evaluation"
authors = [{ name = "MASS-ADK contributors" }]
license = { text = "Research prototype" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "backoff>=2.2.1",
    "cma>=4.0.0",
    "google-adk>=2.0.0",
    "google-cloud-storage>=2.16.0",
    "google-genai>=1.9.0",
    "mcp>=1.9.0",
    "numpy>=1.26.0",
    "openai>=1.55.1",
    "pandas>=2.2.0",
    "pyarrow>=16.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "retrying>=1.3.4",
    "scipy>=1.10.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "google-adk[eval]>=2.0.0",
    "ruff>=0.4.6",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["mass_adk", "mass_adk_mcp", "mass_engine", "mass_engine_adk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
